using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class MeaningString
{
    public const string ground = "ground";
    // PlayerPrefs
    public const string music = "music";
    public const string sound = "sound";
    public const string level = "Level";
    //
    public const string menu = "Menu";
    public const string sceneLevel = "SceneLevel";
    //
    public const string playerSelect = "PlayerSelect";
    public const string state = "State";
    public const string isGrounder = "isGrounder";
    public const string vSpeed = "vSpeed";
    public const string attack = "Attack";
    #region AttributesItem
    public const string weapon = "weapon";
    public const string helmet = "helmet";
    public const string bib = "bib";
    public const string gloves = "gloves";
    public const string boots = "boots";
    public const string amulet = "amulet";
    public const string ring = "ring";
    public const string bracelete = "bracelete";

    public const string damage = "Damage";
    public const string armor = "Armor";
    public const string heatlh = "Heatlh";
    public const string resistance = "Resistance";
    public const string spike = "Spike";
    public const string speed = "Speed";
    public const string vampirism = "Vampirism";
    #endregion
    #region SaveData
    public const string enemy = "enemy";
    public const string enemyKnight = "enemyKnight";
    public const string enemyMagic = "enemyMagic";
    public const string enemySniper = "enemySniper";
    public const string enemyVampire = "enemyVampire";
    #endregion
}
